--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-/* map image
+/* map image */
+div {
+  border: 0;
+  margin: 0;
+  width: 100%;
+  height: 530px;
+}
 
 
 html {
@@ -11,14 +17,13 @@ html {
   }
 
   /* navigation menu */
-  .navbar {
+  nav {
     width: 100%;
     background-color: #0E1F2F;
-    overflow: hidden;
   }
 
   /* Navigation links */
-  .navbar a {
+  li a {
     float: left;
     padding: 12px;
     color: #F5BC00;
@@ -30,18 +35,18 @@ html {
   }
 
   /* Add a background on hover */
-  .navbar a:hover {
+  ul a:hover {
     background-color: #818479;
   }
 
   /* Style current link */
-  .navbar a.active {
+  ul a.active {
     background-color: black;
   }
 
   /* Add responsiveness - mobile*/
   @media screen and (max-width: 500px) {
-    .navbar a {
+    nav a {
       float: none;
       display: block;
       width: 100%;
@@ -81,17 +86,16 @@ html {
   }
 
 
+
   /* 4 jets image */
 
-.Blue Angels {
-  background-image: url('https://images.pexels.com/photos/3758435/pexels-photo-3758435.jpeg');
+  myImage {
+  background-image:("assets\images\pexels-photo-3758435.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: auto 6px;
+  padding: 25px
 }
-
-
 
 
   body {
