--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 /* map image */
-div {
-  border: 0;
-  margin: 0;
-  width: 100%;
-  height: 530px;
+mapquest {
+  position: fixed;
+
 }
+
 
 
 html {
@@ -14,6 +13,7 @@ html {
   #head {
   background: #0E1F2F
   text-align: center;
+
   }
 
   /* navigation menu */
@@ -22,25 +22,32 @@ html {
     background-color: #0E1F2F;
   }
 
-  /* Navigation links */
-  li a {
-    float: left;
-    padding: 12px;
-    color: #F5BC00;
-    text-decoration: none;
-    font-size: 75px;
-    width: 23%;
+  li {
+    list-style-type: none;
+    float:left;
     text-align: center;
+    padding: 20px;
 
   }
 
+  /* Navigation links */
+  nav a {
+    padding: 12px;
+    color: #F5BC00;
+    text-decoration: underline;
+    font-size: 75px;
+    width: 23%;
+    text-align: center;
+  }
+
+
   /* Add a background on hover */
-  ul a:hover {
+  nav a:hover {
     background-color: #818479;
   }
 
   /* Style current link */
-  ul a.active {
+  nav a.active {
     background-color: black;
   }
 
@@ -52,6 +59,7 @@ html {
       width: 100%;
       text-align: left; /* will be left-aligned on small screens */
     }
+
   }
 
   /*From here starts Home page styling with base name */
@@ -98,9 +106,13 @@ html {
 }
 
 
+
   body {
     background-color: #0E1F2F;
     color: #F5BC00;
     padding: 25px;
     font-family: Chakra Petch;
+    list-style: none outside none;
   }
+
+
