--- a/style.css
+++ b/style.css
@@ -93,6 +93,12 @@ html {
     margin: left;
   }
 
+  h3 {
+  color: #F5BC00;
+  font-size: 18px;
+  font-family: Chakra Petch;
+
+  }
 
 
   /* 4 jets image */
