--- a/style.css
+++ b/style.css
@@ -47,8 +47,11 @@ html {
     background-color: black;
   }
 #map {
-  height: 600px;
+  height: 400px;
+  width: 600px;
 }
+
+
   /* Add responsiveness - mobile*/
   @media screen and (max-width: 500px) {
     nav a {
@@ -110,7 +113,7 @@ html {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  border: 3px solid #818479;
+
 }
 
 
