--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ html {
   header {
     color: #F5BC00;
     font-size: 70px;
-    text-align: center;
+    text-align: justify;
     font-family: Chakra Petch;
   }
 
